header in progress

--- a/index.html
+++ b/index.html
@@ -3,9 +3,38 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mon Portfolio</title>
+  <link rel="stylesheet" href="css/style.css">
+  <title>My Portfolio</title>
 </head>
 <body>
-
+  <header>
+    <nav>
+      <ul>
+        <li>Home</li>
+        <li>Skills</li>
+        <li>Works</li>
+      </ul>
+    </nav>
+    <div class="header-flex">
+      <div class="picture">
+        <h1>Sarah<br>&nbsp;&nbsp;Tabet</h1>
+        <img src="images/profile-picture.jpg" alt="Profile picture">
+        <ul class="icons">
+          <li>Mail</li>
+          <li>Linkedin</li>
+          <li>Github</li>
+        </ul>
+      </div>
+      <div class="about">
+        <h3>About me</h3>
+        <p>Front-end Developer, Designer, based in Lyon</p>
+        <a href="#">Know more</a>
+      </div>
+    </div>
+  </header>
+  <section class="skills">
+  </section>
+  <section class="works">
+  </section>
 </body>
 </html>
