--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
       </div>
     </div>
   </header>
+  <section class="description">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      Itaque perspiciatis totam nemo mollitia iste eius illo fugit,
+      quos, blanditiis autem ullam, animi illum harum quas velit quidem voluptatibus ipsum. Ipsam.
+      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
+  </section>
   <section class="skills background">
     <h2>Skills</h2>
     <div class="flex-skills">
@@ -67,6 +75,21 @@
     </div>
   </section>
   <section class="works background">
+    <h2>Works</h2>
+    <div class="cards">
+      <div class=" card lettering">
+        <p>Lettering</p>
+      </div>
+      <div class=" card lettering">
+        <p>Lettering</p>
+      </div>
+      <div class=" card lettering">
+        <p>Lettering</p>
+      </div>
+      <div class=" card lettering">
+        <p>Lettering</p>
+      </div>
+    </div>
   </section>
   <script src="script.js"></script>
 </body>
