animations in progress

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <h1>Sarah<br>&nbsp;&nbsp;Tabet․</h1>
         <img src="images/profile-picture.jpg" alt="Profile picture">
         <ul class="icons">
-          <li><a href="#"><i class="fa-solid fa-envelope icon" style="color: #e1e5ee"></i></a></li>
-          <li><a href="#"><i class="fa-brands fa-linkedin icon" style="color: #e1e5ee"></i></a></li>
-          <li><a href="#"><i class="fa-brands fa-github icon" style="color: #e1e5ee"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/sarah-tabet-/" target="_blank"><i class="fa-brands fa-linkedin icon" style="color: #e1e5ee"></i></a></li>
+          <li><a href="https://github.com/Sarah-0911" target="_blank"><i class="fa-brands fa-github icon" style="color: #e1e5ee"></i></a></li>
+          <li><a href="mailto:sarah.tabet69@gmail.com"><i class="fa-solid fa-envelope icon" style="color: #e1e5ee"></i></a></li>
         </ul>
       </div>
       <div class="about">
@@ -77,17 +77,17 @@
   <section class="works background">
     <h2>Works</h2>
     <div class="cards">
-      <div class=" card lettering">
-        <p>Lettering</p>
+      <div class="card lettering">
+        <a href="#">Lettering</a>
       </div>
-      <div class=" card lettering">
-        <p>Lettering</p>
+      <div class="card lettering">
+        <a href="#">Lettering</a>
       </div>
-      <div class=" card lettering">
-        <p>Lettering</p>
+      <div class="card lettering">
+        <a href="#">Lettering</a>
       </div>
-      <div class=" card lettering">
-        <p>Lettering</p>
+      <div class="card lettering">
+        <a href="#">Lettering</a>
       </div>
     </div>
   </section>
