add hello + description in progress

--- a/index.html
+++ b/index.html
@@ -10,30 +10,33 @@
 <body>
   <header>
     <div class="header-container">
-      <div class="picture">
-        <h1>Sarah<br>&nbsp;&nbsp;Tabet․</h1>
-        <img src="images/profile-picture.jpg" alt="Profile picture">
-        <ul class="icons">
-          <li><a href="https://www.linkedin.com/in/sarah-tabet-/" target="_blank"><i class="fa-brands fa-linkedin icon" style="color: #e1e5ee"></i></a></li>
-          <li><a href="https://github.com/Sarah-0911" target="_blank"><i class="fa-brands fa-github icon" style="color: #e1e5ee"></i></a></li>
-          <li><a href="mailto:sarah.tabet69@gmail.com"><i class="fa-solid fa-envelope icon" style="color: #e1e5ee"></i></a></li>
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Skills</a></li>
+          <li><a href="#">Works</a></li>
         </ul>
+      </nav>
+      <div class="hello">
+        <h1>I'm Sarah!</h1>
+        <img class="hello-img" src="images/hello.jpg" alt="hello">
       </div>
-      <div class="about">
-        <nav>
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Skills</a></li>
-            <li><a href="#">Works</a></li>
+      <div class="picture">
+        <div class="about">
+          <h2><span class="letter-a">A</span>bout me</h2>
+          <p>Front-end Developer and Designer,<br> based in Lyon.</p>
+          <button id="know-btn" class="btn"><a href="#">Know more</a></button>
+          <ul class="icons">
+            <li><a href="https://www.linkedin.com/in/sarah-tabet-/" target="_blank"><i class="fa-brands fa-linkedin icon" style="color: #e1e5ee"></i></a></li>
+            <li><a href="https://github.com/Sarah-0911" target="_blank"><i class="fa-brands fa-github icon" style="color: #e1e5ee"></i></a></li>
+            <li><a href="mailto:sarah.tabet69@gmail.com"><i class="fa-solid fa-envelope icon" style="color: #e1e5ee"></i></a></li>
           </ul>
-        </nav>
-        <h2><span class="letter-a">A</span>bout me</h2>
-        <p>Front-end Developer and Designer,<br> based in Lyon.</p>
-        <button id="know-btn" class="btn"><a href="#">Know more</a></button>
+        </div>
       </div>
     </div>
   </header>
   <section class="description">
+    <img class="profile" src="images/profile-picture.jpg" alt="Profile picture">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
       Itaque perspiciatis totam nemo mollitia iste eius illo fugit,
       quos, blanditiis autem ullam, animi illum harum quas velit quidem voluptatibus ipsum. Ipsam.
@@ -77,8 +80,8 @@
   <section class="works background">
     <h2>Works</h2>
     <div class="cards">
-      <div class="card lettering">
-        <a href="#">Lettering</a>
+      <div class="card web-projects">
+        <a href="#">Projects</a>
       </div>
       <div class="card lettering">
         <a href="#">Lettering</a>
