--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
           <li><a href="#">Works</a></li>
         </ul>
       </nav>
-      <div class="hello">
-        <h1>I'm Sarah!</h1>
+      <div class="hello header-item">
+        <h1>I'm Sarah․</h1>
         <img class="hello-img" src="images/hello.jpg" alt="hello">
       </div>
-      <div class="picture">
+      <div class="picture header-item">
         <div class="about">
           <h2><span class="letter-a">A</span>bout me</h2>
           <p>Front-end Developer and Designer,<br> based in Lyon.</p>
@@ -37,12 +37,15 @@
   </header>
   <section class="description">
     <img class="profile" src="images/profile-picture.jpg" alt="Profile picture">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-      Itaque perspiciatis totam nemo mollitia iste eius illo fugit,
-      quos, blanditiis autem ullam, animi illum harum quas velit quidem voluptatibus ipsum. Ipsam.
-      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </p>
+    <div class="description-text">
+      <h2>Sarah Tabet</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Itaque perspiciatis totam nemo mollitia iste eius illo fugit,
+        quos, blanditiis autem ullam, animi illum harum quas velit quidem voluptatibus ipsum. Ipsam.
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+    </div>
   </section>
   <section class="skills background">
     <h2>Skills</h2>
